--- a/index.html
+++ b/index.html
@@ -506,21 +506,17 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							site@gmail.com
+							kaan.bereketli@outlook.com
 						</li>
 						<li>
 							<span class="text-uppercase">Phone</span>
-							+30 976 1382 9921
-						</li>
-						<li>
-							<span class="text-uppercase">Fax</span>
-							+30 976 1382 9922
+							+90 536 979 5749
 						</li>
 						<li>
 							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower  <br>
-							San Francisco street, M1 50F
+							Istanbul, Turkey <br>
+							Sultan Selim Mah. Kağıthane  <br>
+							Sultan Selim Cd. No:113
 						</li>
 					</ul>
 				</div>
